--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -21,29 +21,23 @@ if ("CORPUS_REGISTRY" %in% names(Sys.getenv()) && nchar(Sys.getenv("CORPUS_REGIS
 
 ## Purpose
 
-The purpose of the package *polmineR* is to facilitate the interactive analysis of corpora using R. Core objectives for the development of the package are performance, usability, and a modular design.
-
-Key aims for developing the package are:
-* To keep the original text accessible. A seamless integration of qualitative and quantitative steps in corpus analysis supports validation, based on inspecting the text behind the numbers.
+The purpose of the package *polmineR* is to facilitate the interactive analysis of corpora using R. Key considerations for the development of the package are performance and usability. Key aims for developing the package are:
 * To provide a library with standard tasks.  It is  an open source platform that will make text mining more productive, avoiding prohibitive costs to reimplement basics, or to run many lines of code to perform a basic tasks.
+* To keep the original text accessible. A seamless integration of qualitative and quantitative steps in corpus analysis supports validation.
 * To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support contrastive/comparative research.
-* To offer performance for users with an ordinary infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed by using the Corpus Workbench (CWB).
+* To offer performance for users with a standard infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed by using the Corpus Workbench (CWB).
 * To support sharing consolidated and documented data, following the ideas of reproducible research.
 
-There are a few R packages for text mining already. The CRAN tast view is a good place to learn about these, see There are several relevant packages on [CRAN]{http://cran.r-project.org/web/views/NaturalLanguageProcessing.html}. It is not necessary to reimplement what has already been implemented. Thus, this package is also meant to serve as an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for mining text with advanced statistical methods.
+The polmineR supplements the R packages that are already widely used for text mining. The intention is not to reimplement what has already been implemented. The CRAN task view is a good place to learn about relevant packages, see  [CRAN]{http://cran.r-project.org/web/views/NaturalLanguageProcessing.html}.  The polmineR is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for mining text with advanced statistical methods.
 
-Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a great machinery to query corpora. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/). TXM, among other things, offers a rich functionality for importing corpora into the CWB. A very specific concern of the driller is to provide the means to examine and to compare subcorpora that are generated based on the metainformation stored as structural attributes to the CWB corpus. In line with the French tradition of discourse analysis (and for technical reasons), these subcorpora are calle
+Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/). TXM, among other things, offers a rich functionality for importing corpora into the CWB. A very specific concern of the polmineR is to provide the means to examine and to compare subcorpora that are generated based on the metainformation stored as structural attributes to the CWB corpus.
 
-The *polmineR* is an instrument to analyse corpora imported to the CWB. The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
-
-In the package, two (very small) sample corpora from the PolMine project are included. The corpus "PLPRBTTXT" is a set of five plenary protocols (out of several thousand) of the German Bundestag. The sample corpus can only be used if the respective registry files contain the path to the binary files of the indexed corpora. The setting is managed by a configure file that is called when the package is installed.
-
-The sample corpora are encoded in latin-1, the traditional encoding used by the CWB. The package is not yet entirely generic as far as encodings are concerned. Problems may still arise when using a utf-8 encoded corpus. Future versions of the driller will be generic in this respect.
+The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
 
 
 ## Getting started
 
-The annex of the vignette includes a detailed explanation how to install polmineR on Windows (32bit R only, so far), MacOS, and Linux. Once you have installed polmineR, check that the environment variable CORPUS_REGISTRY is set.
+The annex of the vignette includes a detailed explanation how to install polmineR on Windows, MacOS, and Linux. Once you have installed polmineR, check that the environment variable CORPUS_REGISTRY is set.
 
 ```{r, eval = FALSE}
 Sys.getenv("CORPUS_REGISTRY")
@@ -55,13 +49,13 @@ See the annex for an explanation how to set the CORPUS_REGISTRY environment vari
 library(polmineR)
 ```
 
-If you want to use a CWB corpus packaged in a R data package, you can call use with the name of the R package. To access the corpus in the data package, the CORPUS_REGISTRY environment variable will be reset.
+If you want to use a CWB corpus packaged in a R data package, you can call use with the name of the R package. To access the corpus in the data package, the CORPUS_REGISTRY environment variable will be reset. In the followings examples, the CWB encoded English version of the Europarl wrapped into a data package will be used.
 
 ```{r, eval = runcode}
 use("europarl.en")
 ```
 
-If you want to use the English Europarl corpus, you can download it from a repository at the PolMine server.
+Note that the use-function will call the resetRegistry-function that can also be used to set again the original path to the directory with registry files. If you want to use the English Europarl corpus, you can download it from a repository at the PolMine server.
 
 ```{r, eval = FALSE}
 install.corpus("europarl.en", repo = "http://polmine.sowi.uni-due.de/packages")
@@ -73,13 +67,16 @@ Use the corpus-method to check whether which corpora are accessible. It should b
 corpus()
 ```
 
+
+## Session settings
+
 Many functions in the polmineR package use settings that are stored in the general options settings. You can see these settings as follows:
 
-```{r, eval = runcode, message = FALSE, results = 'hide'}
+```{r, eval = FALSE, message = FALSE, results = 'hide'}
 options()[grep("polmineR", names(options()))]
 ```
 
-A few methods (such as kwic, or cooccurrences) will use these settings, if no explicit other value is provided. Here are a few examples how to change settings.
+Several methods (such as kwic, or cooccurrences) will use these settings, if no explicit other value is provided. Here are a few examples how to change settings.
 
 ```{r}  
 options("polmineR.left" = 15)
