--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "polmineR"
+title: "Introducing the 'polmineR'-package"
 author: "Andreas Blätte (andreas.blaette@uni-due.de)"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -10,50 +10,70 @@ vignette: >
 
 ---
 
+
 ```{r, eval = TRUE, message = FALSE, echo = FALSE}
 runcode <- FALSE
 if ("CORPUS_REGISTRY" %in% names(Sys.getenv()) && nchar(Sys.getenv("CORPUS_REGISTRY")) > 1){
   library(data.table)
-  if (require(rcqp, quietly = T) && require(polmineR.sampleCorpus, quietly = T)) runcode <- TRUE
+  if (require("rcqp", quietly = T) && require("europarl.en", quietly = T)) runcode <- TRUE
 }
 ```
-
+ 
 
 ## Purpose
 
-The purpose of the package *polmineR* is to facilitate the interactive analysis of corpora using R. Key considerations for the development of the package are performance and usability. Key aims for developing the package are:
-* To provide a library with standard tasks.  It is  an open source platform that will make text mining more productive, avoiding prohibitive costs to reimplement basics, or to run many lines of code to perform a basic tasks.
-* To keep the original text accessible. A seamless integration of qualitative and quantitative steps in corpus analysis supports validation.
-* To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support contrastive/comparative research.
-* To offer performance for users with a standard infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed by using the Corpus Workbench (CWB).
+The purpose of the package *polmineR* is to facilitate the interactive analysis of corpora using R. Apart from performance and usability, key considerations for developing the package are:
+
+* To provide a library with standard tasks such as concordances/keyword-in-context, cooccurrence statistics, or keyword extraction.
+
+* To keep the original text accessible and to offer a seamless integration of qualitative and quantitative steps in corpus analysis that facilitates validation.
+
+* To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support research on synchronic and diachronic change of language use.
+
+* To offer performance for users with a standard infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed using the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/).
+
 * To support sharing consolidated and documented data, following the ideas of reproducible research.
 
-The polmineR supplements the R packages that are already widely used for text mining. The intention is not to reimplement what has already been implemented. The CRAN task view is a good place to learn about relevant packages, see  [CRAN]{http://cran.r-project.org/web/views/NaturalLanguageProcessing.html}.  The polmineR is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for mining text with advanced statistical methods.
+The 'polmineR' package supplements R packages that are already widely used for text mining. The CRAN task view is a good place to learn about relevant packages, see  [CRAN](https://CRAN.R-project.org/view=NaturalLanguageProcessing). The polmineR is intended to be an interface between the [Corpus Workbench (CWB)](http://cwb.sourceforge.net/), an efficient system for storing and querying large corpora, and existing packages for mining text with advanced statistical methods.
 
-Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/). TXM, among other things, offers a rich functionality for importing corpora into the CWB. A very specific concern of the polmineR is to provide the means to examine and to compare subcorpora that are generated based on the metainformation stored as structural attributes to the CWB corpus.
+Apart from the speed of text processing, the Corpus Query Processor (CQP) and the [CQP syntax](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) provide a powerful and widely used syntax to query corpora. This is not an unique idea. Using a combination of R and the CWB implies a software architecture you will also find in the [TXM project](http://sourceforge.net/projects/txm/), or with [CQPweb](http://cwb.sourceforge.net/cqpweb.php). The 'polmineR' package offers a library with the grammer of corpus analysis below a graphical user interface (GUI). It is a toolset to perform simple tasts efficiently as well as to implement complex workflows.
 
-The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
+Advanced user will need a good understanding of the Corpus Workbench. The [Corpus Encoding Tutorial](http://cwb.sourceforge.net/files/CWB_Encoding_Tutorial.pdf) is an authoritative text for that. [The vignette of the rcqp package](https://cran.r-project.org/package=rcqp) includes an excellent explanation of the CWB data-model.
+
+The most important thing users need to now is the difference between "s" and "p" attributes. The CWB distinguishes structural attributes (s-attributes) that will contain the metainformation that can be used to generate subcorpora, and positional attributes (p-attributes).  Typically, the p-attributes will be 'word', 'pos' (for part-of-speech) and 'lemma' (for the lemmatized word form). 
 
 
 ## Getting started
 
-The annex of the vignette includes a detailed explanation how to install polmineR on Windows, MacOS, and Linux. Once you have installed polmineR, check that the environment variable CORPUS_REGISTRY is set.
+##### Check that the CORPUS_REGISTRY environment variable is set
+
+The annex of the vignette includes a detailed explanation how to install polmineR on Windows, MacOS, and Linux. Once you have installed polmineR, check that the environment variable CORPUS_REGISTRY is set. 
 
 ```{r, eval = FALSE}
 Sys.getenv("CORPUS_REGISTRY")
 ```
 
-See the annex for an explanation how to set the CORPUS_REGISTRY environment variable for the current R session, or permanently. If the CORPUS_REGISTRY variable is set correctly, i.e. pointing to the directory with the registry files describing the corpora, load the polmineR.
 
-```{r, eval = runcode}
+The CORPUS_REGISTRY environment variable supplies the directory with registry files that describe where the CWB will find the files of an indexed corpus, and the s- and p-attributes. See the annex for an explanation how to set the CORPUS_REGISTRY environment variable for the current R session, or permanently.
+
+
+##### Loading polmineR
+
+If the CORPUS_REGISTRY variable is set correctly, i.e. pointing to the directory with the registry files describing the corpora, load the polmineR.
+
+```{r, eval = runcode, message = FALSE}
 library(polmineR)
 ```
 
-If you want to use a CWB corpus packaged in a R data package, you can call use with the name of the R package. To access the corpus in the data package, the CORPUS_REGISTRY environment variable will be reset. In the followings examples, the CWB encoded English version of the Europarl wrapped into a data package will be used.
 
-```{r, eval = runcode}
+##### Using and installing packaged corpora
+
+If you want to use a CWB corpus packaged in a R data package, you can call 'use' with the name of the R package. To access the corpus in the data package, the CORPUS_REGISTRY environment variable will be reset. In the followings examples, the CWB encoded English version of the Europarl wrapped into a data package will be used.
+
+```{r, eval = runcode, message = FALSE}
 use("europarl.en")
 ```
+
 
 Note that the use-function will call the resetRegistry-function that can also be used to set again the original path to the directory with registry files. If you want to use the English Europarl corpus, you can download it from a repository at the PolMine server.
 
@@ -61,14 +81,53 @@ Note that the use-function will call the resetRegistry-function that can also be
 install.corpus("europarl.en", repo = "http://polmine.sowi.uni-due.de/packages")
 ```
 
-Use the corpus-method to check whether which corpora are accessible. It should be the EUROPARL-EN corpus in our case (the names of CWB corpora are always written upper case).
+This package may serve as an example how CWB indexed corpora can be shared using an adapted version of standard R functions. Data packages with corpora have a version number which may be important for reproducing results, they can include a vignette documenting the data, and functions to perform specialized tasks.
+
+##### Setting the interface to the Corpus Workbench
+
+The standard interface used by the polmineR package to extract information from CWB indexed corpora is the package 'rcqp'. The interface is defined in a class called 'CQI'. To check which interface is used:
 
 ```{r, eval = runcode}
+class(CQI)
+```
+If you see "CQI.perl" leading the character vector that is returned, something went wrong. Accessing the corpora using perl scripts incurs an incredible performence loss. Reset the interface as follows:
+
+```{r, eval = FALSE}
+unlockBinding(env = getNamespace("polmineR"), sym = "CQI")
+assign("CQI", CQI.rcqp$new(), envir = getNamespace("polmineR"))
+lockBinding(env = getNamespace("polmineR"), sym = "CQI")
+}
+```
+
+
+An alternative interface is provided by the package 'polmineR.Rcpp', [available at GitHub][https://github.com/PolMine/polmineR.Rcpp] so far. This (experimental) package includes a few functions that speed up tasks such as counting terms, or preparing partitions. To install and use 'polmineR.Rcpp':
+
+```{r, eval = FALSE}
+devtools::install_github("PolMine/polmineR.Rcpp")
+setCorpusWorkbenchInterface("Rcpp")
+```
+
+To switch to the interface offered by polmineR.Rcpp, proceed as follows:
+
+```{r, eval = FALSE}
+unlockBinding(env = getNamespace("polmineR"), sym = "CQI")
+assign("CQI", CQI.Rcpp$new(), envir = getNamespace("polmineR"))
+lockBinding(env = getNamespace("polmineR"), sym = "CQI")
+}
+```
+
+The checks performed when submitting a package at CRAN issue a note when the 'unlockBinding' function appears in the source code of the package. This is why a function for reset the interface is not included in the package.
+
+##### Checking that corpora are available
+
+Use the corpus-method to check whether which corpora are accessible. It should be the EUROPARL-EN corpus in our case (the names of CWB corpora are always written upper case).
+
+```{r, eval = runcode, message = FALSE}
 corpus()
 ```
 
 
-## Session settings
+##### Session settings
 
 Many functions in the polmineR package use settings that are stored in the general options settings. You can see these settings as follows:
 
@@ -84,7 +143,7 @@ options("polmineR.right" = 15)
 options("polmineR.mc" = FALSE)
 ```
 
-To speed up computations, the polmineR package will sometimes try to use alternative, faster ways to access CWB corpora than the rcqp package. A few computations that are performance critical (for setting up partitions, or to count term frequencies) are implemented in a supplementary package called polmineR.Rcpp. It can be installed from GitHub, but note that it requires an installation of the Corpus Workbench to be present on your system.
+To speed up computations, the polmineR package will sometimes try to use alternative, faster ways to access CWB corpora than the rcqp package. A few computations that are performance critical (for setting up partitions, or to count term frequencies) are implemented in the plugin package polmineR.Rcpp that has been mentioned before. It can be installed from GitHub. Note that it requires an installation of the Corpus Workbench to be present on your system (see installation instructions in the annex).
 
 ```{r, eval = FALSE}
 devtools::install_github("PolMineR/polmineR")
@@ -92,59 +151,81 @@ devtools::install_github("PolMineR/polmineR")
 
 When loading the polmineR package, it is checked whether that plugin is present. 
 
-```{r, eval = runcode}
+```{r, eval = FALSE}
 getOption("polmineR.Rcpp")
 ```
 
+If you want to suppress using the polmineR.Rcpp functionality:
+
+```{r, eval = FALSE}
+options("polmineR.Rcpp" = FALSE)
+```
+
+
 ## Working with corpora: Core methods
 
-### Keyword-in-context (kwic)
+Core analytical tasks are implemented as methods (S4 class system), i.e. the bevaviour of the methods changes depending on the object that is supplied. Almost all methods can be applied to corpora as well as partitions (subcorpora). As an easy entry, methods applied to corpora are explained first.
 
-The kwic method applied to the name of a corpus will return an output that will be shown in the viewer pane of RStudio. You can include metadata from the corpus using the 'meta' parameter.
+
+##### Keyword-in-context (kwic)
+
+The kwic method applied to the name of a corpus will return a KWIC object, output will be shown in the viewer pane of RStudio. You can include metadata from the corpus using the 'meta' parameter.
 
 ```{r, eval = FALSE}
 kwic("EUROPARL-EN", "Islam")
 kwic("EUROPARL-EN", "Islam", meta = c("text_date", "speaker_name"))
 ```
 
-You can also use the CQP query syntax for formulating queries.
+You can also use the CQP query syntax for formulating queries. That way, you can find multi-word expressions, or match in a manner you may know from using regular expressions.
 
 ```{r, eval = FALSE}
 kwic("EUROPARL-EN", '"Geneva" "Convention"')
 kwic("EUROPARL-EN", '"[Ss]ocial" "justice"')
 ```
 
-Consult tutorials for the [CQP tutorial](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) to learn more about that.
+Explaining the CQP syntax goes beyon this vignette. Consult the [CQP tutorial](http://cwb.sourceforge.net/files/CQP_Tutorial.pdf) to learn more about the CQP syntax.
 
 
-### Getting counts and frequencies
+##### Getting counts and frequencies
 
-```{r}
+You can count one or several hits in a corpus.
+
+```{r, eval = runcode}
 count("EUROPARL-EN", "France")
 count("EUROPARL-EN", c("France", "Germany", "Britain", "Spain", "Italy", "Denmark", "Poland"))
 count("EUROPARL-EN", '"[pP]opulism"')
 ```
 
-### Dispersions
+##### Dispersions
 
-```{r}
-dispersion("EUROPARL-EN", "populism", sAttribute = "text_year")
-dispersion("EUROPARL-EN", '"[pP]opulism"', sAttribute = "text_year", cqp = TRUE)
+... get dispersions of counts accross one (or two) dimensions ...
+
+```{r, eval = runcode, message = FALSE}
+pop <- dispersion("EUROPARL-EN", "populism", sAttribute = "text_year", progress = FALSE)
+popRegex <- dispersion("EUROPARL-EN", '"[pP]opulism"', sAttribute = "text_year", cqp = TRUE, progress = FALSE)
 ```
 
-### Cooccurrences
+Note that it is a data.table that is returned. Visualising the result as a barplot ...
 
-```{r}
+```{r, eval = runcode}
+barplot(height = popRegex[,count], names.arg = popRegex[,text_year], las = 2)
+```
+
+
+##### Cooccurrences
+
+... get cooccurrence statistics ...
+
+```{r, eval = runcode, message = FALSE}
 br <- cooccurrences("EUROPARL-EN", query = "Brussels")
 eu <- cooccurrences("EUROPARL-EN", query = '"European" "Union"', left = 10, right = 10)
-subset(eu, rank_ll <= 100)@stat[["word"]]
+subset(eu, rank_ll <= 100)@stat[["word"]][1:15]
 ```
+
 
 ## Working with subcorpora - partitions
 
-Usually, any session using the driller will start with initializing a partition. The return of a call of the partition function is a S4 partition object, and almost every function of the driller package will require a partition object as an input.
-
-In this example, I set up a partition with the speeches, not the interjections, deliverd by members of the CDU parliamentary group in the parliament of Northrhine-Westfalia. Attributes are handed over as a list. Setting up a partition sometimes consumes some time, so you will get messages about progress.
+Easily creating partitions (i.e. subcorpora) based on s-attributes is a strength of the 'polmineR' package. So if we want to work with the speeches given in the European Parliament in 2006:
 
 ```{r, eval = runcode, message = FALSE, results = 'hide'}
 ep2006 <- partition("EUROPARL-EN", text_year = "2006")
@@ -156,21 +237,64 @@ To get some basic information about the partition that has been set up, the 'sho
 ep2006
 ```
 
-Note that is possible to omit steps of the initialization of a partition object, thus speeding up the initialization significantly. Setting up a table with metadata and retrieving term frequencies can be switched off (metadata=FALSE, tf=FALSE). Other functions (context, distribution) however require respective information and do not work if the partition object lacks this information. Setting up a partition may be a bit slow, but generates information that allows further analytical steps based on a partition object to be much quicker.
-
-There are two methods to set up a partition, 'grep' and 'in'. If the method is 'in', you can provide a character vector for every s-attribute. If the method is "grep", all s-Attribute values are kept that match a regex. As an example for the 'in'-procedure, if you want a partition comprising of CDU/CSU and FDP as parties, you might formulate:\footnote{Sometimes, you will want to be more specific about the start and end date of a partition. In this case, you can set a dateRange.}
+To evaluate s-attributes, regular expressions can be used.
 
 ```{r, eval = runcode, message = FALSE}
 barroso <- partition("EUROPARL-EN", speaker_name = "Barroso", regex = TRUE)
 sAttributes(barroso, "speaker_name")
 ```
 
-If you work with a flat XML structure, the order of the provided s-attributes may be relevant for speeding up the set up of the partition. For a nested XML, it is important that with the order, you move from ancestors to childs. For further information, see the documentation of the function.
+If you work with a flat XML structure, the order of the provided s-attributes may be relevant for speeding up the set up of the partition. For a nested XML, it is important that with the order, you move from ancestors to childs. For further information, see the documentation of the partition-function.
+
+
+## Cooccurrences
+
+The cooccurrences-method can be applied to partition-objects.
+
+```{r, eval = runcode, message = FALSE}
+ep2002 <- partition("EUROPARL-EN", text_year = "2006")
+terror <- cooccurrences(ep2002, "terrorism", pAttribute = "lemma", left = 10, right = 10)
+```
+
+Note that is is possible to provide a query that uses the full CQP syntax. The statistical analysis of collocations to the query can be accessed as the slot "stat" of the context object.
+
+```{r, eval = runcode}
+terror@stat[1:10,][,.(lemma, count_partition, rank_ll)]
+```
+
+
+## Distribution of queries
+
+To understand the occurance of a phenomenon, the distribution of query results across one or two dimensions will often be interesing. This is done via the 'distribution' function. The query may use the CQP syntax.
+
+```{r, eval = runcode}
+# one query / one dimension
+oneQuery <- dispersion(ep2002, query = 'terrorism', "text_date", progress = FALSE)
+
+# # multiple queries / one dimension
+twoQueries <- dispersion(ep2002, query= c("war", "peace"), "text_date", progress = FALSE)
+```
+
+
+## Getting features
+
+To identify the specific vocabulary of a corpus of interest, a statistical test based (chi square, or log likelihood) can be performed.
+
+```{r, eval = runcode, message = FALSE}
+ep2002 <- partition("EUROPARL-EN", text_year = "2002")
+ep2002 <- enrich(ep2002, pAttribute = "word")
+
+epPre911 <- partition("EUROPARL-EN", text_year = as.character(1997:2001))
+epPre911 <- enrich(epPre911, pAttribute = "word")
+
+F <- features(ep2002, epPre911, included = FALSE)
+subset(F, rank_chisquare <= 50)@stat[["word"]]
+```
 
 
 ## Getting a tm TermDocumentMatrix
 
-For many applications, term-document matrices are the point of departure. The tm class TermDocumentMatrix serves as an input to several R packages implementing advanced text mining techniques. Obtaining this input from a corpus imported to the CWB will usually involve setting up a partitionCluster and then applying a method to get the matrix.
+For many applications, term-document matrices are the point of departure. The tm class TermDocumentMatrix serves as an input to several R packages implementing advanced text mining techniques. Obtaining this input from a corpus imported to the CWB will usually involve setting up a partitionBundle and then applying a method to get the matrix.
 
 ```{r, eval = FALSE}
 speakers <- partitionBundle(
@@ -186,65 +310,16 @@ m[c("Barroso", "Schulz"),]
 ```
 
 
-## Cooccurrences
+## Moving on
 
-The partition object has a method that will give you immediate access to view the concordances of a (single-word) word found in a partition by indexing the partition object accordingly. This a shortcut that may be useful at times. Usually, the context function will be called first, the summary method will give some information on the resulting context object.
-
-
-```{r, eval = runcode, message = FALSE}
-ep2002 <- partition("EUROPARL-EN", text_year = "2006")
-terror <- cooccurrences(ep2002, "terrorism", pAttribute = "lemma", left = 10, right = 10)
-```
-
-
-Note that is is possible to provide a query that uses the full CQP syntax. The statistical analysis of collocations to the query can be accessed as the slot "stat" of the context object.
-
-To view some concordances, the context object can be indexed accordingly. If you put a query in double brackets, it is used as a filter, giving you those concordances containing this query. If you run R in a console, you may use xterm color highlighting. The colors can be set via drillingControls. This applies also for the metainformation you receive as output.
-
-
-## Distribution of queries
-
-To understand the occurance of a phenomenon, the distribution of query results across one or two dimensions will often be interesing. This is done via the 'distribution' function. The query may use the CQP syntax. The function is a wrapper for three different functions. Which one is called will depend on the number of queries provided and whether one or two s-attributes are provided as dimensions. The output depends on the input and the respective function that is called.
-
-
-```{r, eval = runcode}
-# one query / one dimension
-oneQuery <- dispersion(ep2002, query = 'terrorism', "text_date", progress = FALSE)
-
-# # multiple queries / one dimension
-twoQueries <- dispersion(ep2002, query= c("war", "peace"), "text_date", progress = FALSE)
-```
-
-
-## Getting features
-
-To identify the specific vocabulary of a corpus of interest, a keyness test based on the chi square test can be performed. The following example also shows how a partitio can be used based on a grep procedue.
-
-```{r, eval = runcode, message = FALSE}
-ep2002 <- partition("EUROPARL-EN", text_year = "2002")
-ep2002 <- enrich(ep2002, pAttribute = "word")
-
-epPre911 <- partition("EUROPARL-EN", text_year = as.character(1997:2001))
-epPre911 <- enrich(epPre911, pAttribute = "word")
-
-F <- features(ep2002, epPre911, included = FALSE)
-subset(F, rank_chisquare <= 50)@stat[["word"]]
-```
-
-## Shiny
-
-If the driller runs on a local installation, some shiny apps can be tested that are included in the package by calling polmineR().
-
-The apps will search the global environment for partition objects and offer to choose one of these from a drop-down menu. Thus, for using the apps, relevant partition objects should be generated first during a command-line R session. Then you may start calling the apps.
-
-The apps are still experimental and at times may throw out errors before you get a result. They are included to demonstrate how using the driller is meant to be made more convenient in future versions of the package.
+The package includes many features that go beyond this vignette. It is a key aim in the project to develop respective documentation in the vignette and the man pages for the individual functions further. Feedback is very welcome!
 
 
 ## Annex I: Installing polmineR
 
-### Windows
+### Windows (32 bit / i386)
 
-At this stage, polmineR will only run under 32bit R. Usually, an R installation will include both 32bit and 64bit R. Make sure that you work with 32bit version. If you work with RStudio (highly recommended), the menu Tools > Global Options will open a dialogue where you can choose 32bit R.
+At this stage, an easy way to install polmineR is available only for 32bit R. Usually, an R installation will include both 32bit and 64bit R. So if you want to keep things simple, make sure that you work with 32bit version. If you work with RStudio (highly recommended), the menu Tools > Global Options will open a dialogue where you can choose 32bit R.
 
 Before installing polmineR, the package 'rcqp' needs to be installed. In turn, rcqp requires plyr, which should be installed first.
 
@@ -252,7 +327,7 @@ Before installing polmineR, the package 'rcqp' needs to be installed. In turn, r
 install.packages("plyr")
 ```
 
-Windows binaries for the rcqp package are not available at CRAN, but can be installed from a repository of packages entertained at the server of the PolMine project:
+To avoid compiling C code in a package, packages with compiled binaries are very handy. Windows binaries for the rcqp package are not available at CRAN, but can be installed from a repository of packages entertained at the server of the PolMine project:
 
 ```{r, eval = FALSE}
 install.packages("rcqp", repos = "http://polmine.sowi.uni-due.de/packages", type = "win.binary")
@@ -300,7 +375,7 @@ Two important notes concerning problems with the CORPUS_REGISTRY environment var
 
 * If you keep data on another volume than your system files, your R packages etc. (eg. volume 'C:' for system files, and 'D:' for data and user files), make sure to set the working directory (`setwd()`) is set to any directory on the volume with the directory defined via CORPUS_REGISTRY. CWB/rcqp will assume that the CORPUS_REGISTRY directory is on the same volume as the current working directory (which can be identified by calling `getwd()`).
 
-Finally: polmineR if optimized for working with RStudio. However, as polmineR is currently only available for 32bit R, you may have to check in the settings of RStudio that it will call 32bit R. To be sure, check the startup message.
+Finally: polmineR if optimized for working with RStudio. It you work with 32bit R, you may have to check in the settings of RStudio that it will call 32bit R. To be sure, check the startup message.
 
 If everything works, check whether polmineR can be loaded.
 
@@ -309,6 +384,41 @@ library(polmineR)
 corpus() # to see corpora available at your system
 ```
 
+
+### Windows (64 bit / x86)
+
+At this stage, 64 bit support is still experimental. Apart from an installation of 64 bit R, you will need to install Rtools, available [here](https://cran.r-project.org/bin/windows/Rtools/). Rtools is a collection of tools necessary to build and compile R packages on a Windows machine.
+
+To interface to a core C library of the Corpus Workbench (CWB), you will need an installation of a 64 bit AND a 32 bit version of the CWB. 
+
+The "official" 32 bit version of the CWB is available [here](https://sourceforge.net/projects/cwb/files/cwb/cwb-3.4-beta/). Installation instructions are available at the [CWB Website](http://cwb.sourceforge.net/beta.php). The 32 bit version should be installed in the directory "C:\Program Files", with admin rights.
+
+The 64 bit version, prepared by Andreas Blaette, is available [here](http://polmine.sowi.uni-due.de/public/?dir=CWB). Install this 64 bit CWB version to "C:\Program Files (x86)". In the unzipped downloaded zip file, you will find a bat file that will do the installation. Take care that you run the file with administrator rights. Without these rights, no files will be copied.
+
+The interface to the Corpus Workbench is the package polmineR.Rcpp, [available at GitHub](https://www.github.com/PolMine/polminer.Rcpp). If you use git, you can clone that repository, otherwise, you can download a zip file.
+
+The downloaded zip file needs to be unzipped again. Then, in the directory with the 'polmineR.Rcpp'-directory, run:
+
+```{sh, eval = FALSE}
+R CMD build polmineR.Rcpp
+R CMD INSTALL polmineR.Rcpp_0.1.0.tar.gz
+```
+
+If you read closely what is going on during the compilation, you will see a few warnings that libraries are not found. If creating the package is not aborted, nothing is wrong. R CMD build will look for the 64 bit files in the directory with the 32 bit dlls first and discover that they do not work for 64 bit, only then will it move to the correct location.
+
+One polmineR.Rcpp is installed, proceed with the instructions for installing polmineR in a 32 bit context. Future binary releases of the polmineR.Rcpp package may make things easier. Anyway, the proof of concept is there that polmineR will work on a 64 bit Windows machine too.
+
+Finally, you need to make sure that polmineR will interface to CWB indexed corpora using polmineR.Rcpp, and not with rcqp (the default). To set the interface accordingly:
+
+```{r, eval = FALSE}
+setCorpusWorkbenchInterface("Rcpp")
+```
+
+To test whether corpora are available:
+
+```{r, eval = runcode}
+corpus()
+```
 
 ### MacOS
 
@@ -349,9 +459,10 @@ sudo port install pcre
 Alternatively, if you prefer brew (which we do), after installing brew:
 
 ```{sh, eval = FALSE}
-brew install glib
-brew install pcre
-brew install pkg-config
+brew -v install pkg-config
+brew -v install glib --universal
+brew -v install pcre --universal
+brew -v install readline
 ```
 
 
@@ -412,7 +523,7 @@ Sys.getenv("CORPUS_REGISTRY")
 
 You can set the environment variable permanently to avoid having to set it each time before you want to use polmineR. A good way is to inlude the following line in the file .Renviron in your home directory:
 
-```{r, evla = FALSE}
+```{r, eval = FALSE}
 CORPUS_REGISTRY="/PATH/TO/YOUR/REGISTRY/DIRECTORY"
 ```
 
