rework of sAttributes

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ output to RStudio viewer
 * cooccurrencesBundle-class and cooccurrence-method for bundle restored
 * as.data.table for cooccurrencesBundle-class
 * count-method for whole corpus for pAttribute > 1
+* functionality of meta-method merged into sAttributes-method (meta-method dropped)
 
 v0.7.2
 * updated documentation of partition-method.
